Sort team images by site

--- a/layouts/_partials/get-team-image.html
+++ b/layouts/_partials/get-team-image.html
@@ -10,8 +10,9 @@
 
 {{ $picture := .picture }}
 {{ $name := .name }}
+{{ $site := .site }}
 
-{{ $imagePath := printf "images/team/%s" $picture }}
+{{ $imagePath := printf "images/team/%s/%s" $site $picture }}
 {{ $imageResource := resources.Get $imagePath }}
 {{ $finalImage := "" }}
 
