--- a/assets/scss/_kko-team.scss
+++ b/assets/scss/_kko-team.scss
@@ -32,9 +32,14 @@
         color: $kko-base-blue;
         margin-top: 3rem;
         margin-bottom: 1.5rem;
+        font-size: 2.5rem;
         &:first-child {
             margin-top: 0;
         }
+    }
+
+    h3 {
+        line-height: 1.15;
     }
     
     .uk-grid {
@@ -42,12 +47,12 @@
     }
     
     .uk-card {
-        aspect-ratio: 2 / 3;
+        aspect-ratio: 3 / 5;
         display: flex;
         flex-direction: column;
         
         .uk-card-media-top {
-            flex: 2;
+            flex: 3;
             overflow: hidden;
             
             img {
@@ -58,7 +63,8 @@
         }
         
         .uk-card-body {
-            flex: 1;
+            flex: 2;
+            overflow: hidden;
             padding: 1rem;
             display: flex;
             flex-direction: column;
