--- a/layouts/_partials/render-team-grid.html
+++ b/layouts/_partials/render-team-grid.html
@@ -14,15 +14,16 @@
         <h2>{{ $currentSection }}</h2>
         <div class="uk-grid uk-grid-medium uk-child-width-1-2@s uk-child-width-1-3@m uk-child-width-1-4@l" uk-grid>
         {{ $gridOpen = true }}
-      {{ else if .name }}
-        {{ $name := .name }}
+      {{ else if .firstname }}
+        {{ $firstname := .firstname }}
+        {{ $lastname := .lastname }}
         {{ $function := .function }}
         {{ $site := .site }}
         {{ $group := .group }}
         {{ $picture := .picture }}
         
         <div>
-          {{ partial "render-team-card.html" (dict "name" $name "function" $function "picture" $picture "site" $site "group" $group "Site" $.Site) }}
+          {{ partial "render-team-card.html" (dict "firstname" $firstname "lastname" $lastname "function" $function "picture" $picture "site" $site "group" $group "Site" $.Site) }}
         </div>
       {{ end }}
     {{ else if eq . "break" }}
