--- a/assets/scss/_kko-blog-single.scss
+++ b/assets/scss/_kko-blog-single.scss
@@ -21,7 +21,7 @@
                 width: 3rem;
                 height: 3rem;
                 border-radius: 100%;
-                background-color: $kko-base-beige;;
+                background-color: $kko-base-beige;
                 fill: $kko-base-blue;
             }
         }
@@ -34,6 +34,20 @@
                 font-size: 0.85rem;
                 margin-top: 0.7rem;
                 margin-bottom: 1.5rem;
+            }
+            &.kko-float-left {
+                @media (min-width: $breakpoint-small) {
+                    float: left;
+                    width: 30%;
+                    padding-right: 1rem;
+                }
+            }
+            &.kko-float-right {
+                @media (min-width: $breakpoint-small) {
+                    float: right;
+                    width: 30%;
+                    padding-left: 1rem;
+                }
             }
        }
     }
