--- a/layouts/_partials/kko-header.html
+++ b/layouts/_partials/kko-header.html
@@ -5,7 +5,8 @@
   <div class="kko-logo">
     {{- partial "get-svg.html" "images/kko-logo-and-name.svg" -}}
   </div>
-  <div class="kko-pulldown-menu">
+  <div class="kko-pulldown-menu kko-background-blue
+  ">
     {{- partial "render-menu.html" . -}}
 
       <button class="kko-close-button">
