--- a/assets/scss/_kko-menu.scss
+++ b/assets/scss/_kko-menu.scss
@@ -6,11 +6,12 @@
   padding-left: 5cqw;
   padding-top: 3c;
   height: calc(100vh - #{$kko-border-stripe-width * 3});
-  width: 100%;
+  max-width: 100%;
   left: 0;
 
   @media (min-width: $breakpoint-small) {
     height: 100vh;
+    width:600px;
   }
 
   a {
@@ -20,7 +21,6 @@
   .kko-color-logo {
     margin-bottom: 3cqw;
     margin-top: 6cqw;
-
     svg {
       width: 20cqw;
     }
