--- a/layouts/_partials/render-block.html
+++ b/layouts/_partials/render-block.html
@@ -9,6 +9,7 @@ Expects:
 {{ $id := .id }}
 {{ $page := .page }}
 {{ $renderedContent := "" }}
+{{ $background := "" }}
 
 {{/* Construct the path to the block page */}}
 {{ $blockPath := printf "blocks/%s" $id }}
@@ -17,30 +18,25 @@ Expects:
 {{ $block := $page.Site.GetPage $blockPath }}
 
 {{ if $block }}
+  {{ $background = $block.Params.background }}
   {{ if eq $block.Params.type "3-picture-circles" }}
-    <div class="kko-block kko-picture-circles">
-      <div class="kko-picture-circles-layout">
-      {{ range (seq 1 3) }}
-        {{ partial "picture-circle.html" (dict "block" $block "layout" 3 "index" .) }}
-      {{ end }}
-      </div>
-    </div>
+    {{ $circleContent := "" }}
+    {{ range (seq 1 3) }}
+      {{ $circleContent = printf "%s%s" $circleContent (partial "picture-circle.html" (dict "block" $block "layout" 3 "index" .)) }}
+    {{ end }}
+    {{ $renderedContent = printf `<div class="kko-block kko-picture-circles"><div class="kko-picture-circles-layout">%s</div></div>` $circleContent }}
   {{ else if eq $block.Params.type "5-picture-circles" }}
-    <div class="kko-block kko-picture-circles">
-      <div class="kko-picture-circles-layout">
-      {{ range (seq 1 5) }}
-        {{ partial "picture-circle.html" (dict "block" $block "layout" 5 "index" .) }}
-      {{ end }}
-      </div>
-    </div>
+    {{ $circleContent := "" }}
+    {{ range (seq 1 5) }}
+      {{ $circleContent = printf "%s%s" $circleContent (partial "picture-circle.html" (dict "block" $block "layout" 5 "index" .)) }}
+    {{ end }}
+    {{ $renderedContent = printf `<div class="kko-block kko-picture-circles"><div class="kko-picture-circles-layout">%s</div></div>` $circleContent }}
   {{ else }}
-    {{ $renderedContent = $block.Content }} {{/* Use RenderString for shortcodes etc. */}}
+    {{ $renderedContent = printf `<div class="kko-block">%s</div>` ($block.Content | safeHTML) }}
   {{ end }}
 {{ else }}
   {{ errorf "Block '%s' not found at path '%s'" $id $blockPath }}
 {{ end }}
 
-{{/* Return the rendered HTML content */}}
-<div class="kko-block kko-background-{{ $block.Params.background }}">
-  {{ $renderedContent | safe.HTML }}
-</div>
+{{/* Return a dict with HTML content and background color */}}
+{{ return (dict "html" $renderedContent "background" $background) }}
