--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -2,7 +2,7 @@
 {{ $groupInfo := partial "get-group-data.html" . }}
 <div class="kko-blog-single kko-single-page">
 {{ partial "single-page-header.html" . }}
-<div class="uk-container">
+<div class="uk-container uk-container-xsmall">
     <div class="kko-blog-content kko-single-page-content">
     <h1 class="kko-blog-title">{{ .Title }}</h1>
     <div class="kko-blog-byline">
