--- a/assets/scss/_kko-team.scss
+++ b/assets/scss/_kko-team.scss
@@ -3,24 +3,47 @@
     margin-bottom: 4rem;
     .uk-slider-items {
         gap: 1rem;
-    }
-    .uk-card {
-        width: 80vw;
+        
+        width: 60vw;
         @media (min-width: $breakpoint-small) {
-            width: 20rem;
+            width: 200px;
         }
     }
-    h3 {
-        color: $kko-base-blue;
-        text-decoration: none;
-        font-size: 2rem;
-        margin-top: 0rem;
-        margin-bottom: 0.5rem;
-    }
-    .kko-team-meta {
-        font-size: 0.9rem;
-        color: $kko-base-blue;
-        margin-bottom: 1rem;
+    .uk-card {
+        aspect-ratio: 3 / 5;
+        display: flex;
+        flex-direction: column;
+        
+        .uk-card-media-top {
+            flex: 3;
+            overflow: hidden;
+            
+            img {
+                object-fit: cover;
+            }
+        }
+        
+        .uk-card-body {
+            flex: 2;
+            overflow: hidden;
+            padding: 1rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            
+            h3 {
+                font-size: 1.5rem;
+                color: $kko-base-blue;
+                text-decoration: none;
+                line-height: 1.2;
+            }
+            .kko-team-meta {
+                font-size: 1rem;
+                span {
+                    white-space: nowrap;
+                }
+            }
+        }
     }
 }
 
