--- a/assets/scss/_kko-team.scss
+++ b/assets/scss/_kko-team.scss
@@ -36,9 +36,10 @@
                 color: $kko-base-blue;
                 text-decoration: none;
                 line-height: 1.2;
+                margin-bottom: 1rem;
             }
             .kko-team-meta {
-                font-size: 1rem;
+                font-size: 0.9rem;
                 span {
                     white-space: nowrap;
                 }
