--- a/assets/scss/_kko-blog-single.scss
+++ b/assets/scss/_kko-blog-single.scss
@@ -1,5 +1,12 @@
 .kko-blog-single {
     background-color: $kko-blog-grey-blue;
+    p {
+        line-height: 1.6;
+        margin-bottom: 1.2rem;
+        font-size: 1.1rem;
+        margin-top: 0rem;
+        hyphens: auto;
+    }
     .kko-blog-content {
         max-width: 60em;
         .kko-blog-title {
@@ -26,27 +33,31 @@
             }
         }
         .kko-blog-pic {
+            padding-top: 0.5rem;
+            margin: 0;
             img {
                 max-width: 100%;
                 height: auto;
             }
             figcaption {
-                font-size: 0.85rem;
-                margin-top: 0.7rem;
-                margin-bottom: 1.5rem;
+                font-size: 1rem;
+                margin-top: 0.3rem;
+                margin-bottom: 0.5rem;
+                font-style: italic;;
             }
             &.kko-float-left {
                 @media (min-width: $breakpoint-small) {
                     float: left;
                     width: 30%;
-                    padding-right: 1rem;
+                   
+                    padding-right: 2.5rem;
                 }
             }
             &.kko-float-right {
                 @media (min-width: $breakpoint-small) {
                     float: right;
                     width: 30%;
-                    padding-left: 1rem;
+                    padding-left: 2.5rem;
                 }
             }
        }
