--- a/layouts/_partials/title.html
+++ b/layouts/_partials/title.html
@@ -1,5 +1,5 @@
 <div class="uk-container uk-container-xsmall uk-margin-large-top uk-margin-bottom">
-<h1 class="ti-title">
+<h1 class="ti-title uk-heading-line uk-text-center">
     {{ .title }}
 </h1>
 {{ if .claim }}
