--- a/layouts/_partials/render-menu.html
+++ b/layouts/_partials/render-menu.html
@@ -3,8 +3,10 @@
 {{/* Render the menu with the color logo and main links */}}
 <div class="kko-menu">
   <div class="kko-color-logo">
+<a href="/">
     {{- partial "get-svg.html" "images/kko-color-head.svg" -}}
   </div>
+</a>    
   <div class="kko-name">Kinderkrippe<br />Olten</div>
   <div class="kko-main-menu">
     {{ range $menu.mainlinks }}
