Add margin in single page header

--- a/layouts/single.html
+++ b/layouts/single.html
@@ -1,4 +1,6 @@
 {{ define "main" }}
+<div class="kko-team-page kko-single-page">
 {{ partial "single-page-header.html" . }}
 {{ .Content }}
+</div>
 {{ end }}
