--- a/layouts/_shortcodes/team-section.html
+++ b/layouts/_shortcodes/team-section.html
@@ -1,3 +1,5 @@
 {{/* layouts/_shortcodes/team-section.html */}}
 {{ $siteFilter := .Get "siteFilter" }}
-{{ partial "render-team-section.html" (dict "siteFilter" $siteFilter "Site" .Page.Site) }}
+{{/* $title := "Unser Team" */}}
+{{ $title := .Get "title" }}
+{{ partial "render-team-section.html" (dict "siteFilter" $siteFilter "Site" .Page.Site "title" $title) }}
